--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,8 +26,10 @@ color: #9500ff;
     width: 320px;
     box-sizing: border-box;
     display: flex;
+    flex-direction: column;
     margin: 0 auto;
     background-color: antiquewhite;
+    position: relative;
 }
 
 /* The Overlay (background) */
@@ -39,7 +41,8 @@ color: #9500ff;
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
+    background-image: url(../Assets/Asset1.png); 
+    background-size: cover;
     background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
@@ -59,7 +62,8 @@ color: #9500ff;
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    font-weight: 900;
+    color: #ffff;
     display: block; /* Display block instead of inline */
     transition: 0.3s; /* Transition effects on hover (color) */
   }
@@ -85,4 +89,36 @@ color: #9500ff;
       top: 15px;
       right: 35px;
     }
+  }
+  .mobileMenu{
+      width: 50%;
+      position: absolute;
+      color: white;
+  }
+  #partOne{
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      text-align: center;
+      height: 500px;
+      justify-content: center;
+      align-items: center;
+      background-image: url(../Assets/Asset1.png); 
+    background-size: cover;
+    margin-top: 0;
+  }
+
+  .qualityEducation{
+      color: white;
+      font-weight: 800;
+  }
+  #partTwo{
+      width: 100%;
+      height: 500px;
+      box-sizing: border-box;
+      background-image: url(../Assets/Group108.png);
+      background-size: contain;
+      background-repeat: no-repeat;
   }
