--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -152,3 +152,36 @@ color: #9500ff;
     top: 25px;
     position: absolute;
   }
+  .projects{
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .twoInOne{
+    width: 100%;
+    box-sizing: border-box;
+    background-image: url(../Assets/globe.png) ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .project{
+    width: 300px;
+    height: 260px;
+    background-color: #3C93DB;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    padding: 12px;
+  }
+  .project img {
+    border-radius: 12px;
+  }
+  .project h2{
+    text-align: center;
+    color: white;
+  }
