--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -171,7 +171,7 @@ color: #9500ff;
   }
   .project{
     width: 300px;
-    height: 260px;
+    height: 300px;
     background-color: #3C93DB;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -184,4 +184,50 @@ color: #9500ff;
   .project h2{
     text-align: center;
     color: white;
+  }
+  #myProgress {
+    width: 100%;
+    border: solid 2px #2357C7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 2px;
+  }
+  
+  #myBar1 {
+    width: 100%;
+    height: 30px;
+    background-color: #2357C7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    
+  }
+  #myBar2 {
+    width: 100%;
+    height: 30px;
+    background-color: #2357C7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    
+  }
+  #myBar3 {
+    width: 1%;
+    height: 30px;
+    background-color: #2357C7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    
+  }
+  #myBar4 {
+    width: 25%;
+    height: 30px;
+    background-color: #2357C7;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+  
+  .priceProgress{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    color: white;font-weight: 600;
   }
