--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -273,6 +273,10 @@ color: #9500ff;
     flex-direction: column;
     align-items: center;
     padding: 15px;
+    padding-top: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    text-align: center;
   }
   .container{
     width: 100%;
@@ -292,7 +296,6 @@ color: #9500ff;
     border-radius: 12px;
   }
   .btn{
-    
     width: 120px;
     padding: 5px;
     background-color: black;
