--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -235,7 +235,12 @@ color: #9500ff;
     text-decoration: none;
     text-align: center;
     width: 320px;
-    background-color: #2357C7;
+   color: white;
+   font-weight: 700;
+   font-size: 17px;
+  }
+  .learnMore:hover{
+    color: #a9d1f1;
   }
   .aboutUs{
     width: 100%;
@@ -300,4 +305,16 @@ color: #9500ff;
     padding: 5px;
     background-color: black;
     color: white;
+  }
+  /* katoe */
+  .katoe{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .tops{
+    margin: 0 auto;
   }
