--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -318,3 +318,28 @@ color: #9500ff;
   .tops{
     margin: 0 auto;
   }
+  .giveNow, .middle{
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .giveNow a{
+    width: 140px;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    
+  }
+  .middle{
+    margin-top: -200px;
+    padding-bottom: 100px;
+    color: white;
+  }
+  .giveNow a:hover{
+    opacity: 0.4;
+  }
