--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,6 +24,7 @@ color: #9500ff;
 */
 #mainContainer{
     width: 320px;
+    width: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -121,6 +122,7 @@ color: #9500ff;
       background-image: url(../Assets/Group108.png);
       background-size: contain;
       background-repeat: no-repeat;
+      background-position: center;
       margin-top: 25px;
       margin-bottom: 25px;
       display: flex;
@@ -134,6 +136,10 @@ color: #9500ff;
     color: white;
     margin-top: 50px;
   }
+  #partTwo p{
+    width: 320px;
+    padding: 15px;
+}
   #partTwo a{
     width: 180px;
     padding: 7px;
