--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,5 +1,13 @@
 @media screen and (min-width:769px) {
-    
+    .twoInOne{
+        flex-direction: row;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .twoInOne{
+        flex-direction: column;
+    }
 }
 @media screen and (min-width:426px) {
     #partOne svg{
@@ -7,7 +15,23 @@
     }
     #partTwo{
         background-size: contain;
-        background-size: 700px;
+        background-size: 900px;
+        height: 380px;
+        background-image: url(../Assets/Group112x.png);
+        margin: 0 auto;
+    }
+    #partTwo p{
+        font-size: 18px;
+    }
+    #ourProjects img {
+        max-width: 600px;
     }
     
+}
+
+@media screen and (min-width:630px) {
+    .twoInOne{
+        flex-direction: row;
+    }
+   
 }
