--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -13,6 +13,7 @@
     .twoInOne{
         flex-direction: row;
     }
+   
 }
 
 @media screen and (min-width:426px) {
@@ -31,6 +32,10 @@
     }
     #ourProjects img {
         max-width: 600px;
+    }
+    .theTeam{
+        flex-wrap: wrap;
+        flex-direction: row;
     }
     
 }
