--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -299,7 +299,7 @@ color: #9500ff;
     margin-top: 25px;
     margin-bottom: 25px;
     text-align: center;
-    background-color: gray;
+    background-color: rgb(148, 146, 146);
     color: white;
   }
   .container{
