--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -447,7 +447,7 @@ color: #9500ff;
     padding: 15px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
   }
   .donAte{
