--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -290,7 +290,6 @@ color: #9500ff;
   .footer{
     width: 100%;
     box-sizing: border-box;
-    border-top: solid 2px black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -299,7 +298,7 @@ color: #9500ff;
     margin-top: 25px;
     margin-bottom: 25px;
     text-align: center;
-    background-color: rgb(148, 146, 146);
+    background-color: #3C93DB;
     color: white;
   }
   .container{
