--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -115,31 +115,38 @@ color: #9500ff;
       color: white;
       font-weight: 800;
   }
+  .stats{
+    width: 100%;
+    box-sizing: border-box;
+  }
   #partTwo{
       width: 100%;
-      box-sizing: border-box;
+      height: 600px;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
+      box-sizing: border-box;
       text-align: center;
       color: white;
       position: relative;
+      padding: 15px;
   }
-  #partTwo h2{
-    color: white;
-    margin-top: 50px;
-  }
-  #partTwo p{
-    width: 290px;
-    padding: 15px;
-}
+ 
   #partTwo a{
     width: 280px;
+    position: absolute;
     padding: 7px;
     color: white;
     background-color:#333333;
     font-size: 25px;
+    text-decoration: none;
+  }
+  #partTwo a:hover{
+    opacity: 0.5;
+  }
+  #partTwo img{
+    max-width: 600px;
   }
   #ourProjects{
     width: 100%;
@@ -470,7 +477,7 @@ opacity: 0.5;
   .box {
     width:70%;
     height:100px;
-    background:#2357C7;
+    background:#333333;
     margin:40px auto;
     display: flex;
     justify-content: center;
