--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -523,17 +523,17 @@ opacity: 0.5;
   justify-content: center;
   align-items: center;
 }
-.vmieo{
-  width: 100%;
-  height:500px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  background-image: url(../Assets/globe.png);
-  background-size: contain;
+
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
 }
-.vmieo iframe{
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
