--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -527,7 +527,7 @@ opacity: 0.5;
 
 .videoWrapper {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 50.25%; /* 16:9 */
   height: 0;
 }
 .videoWrapper iframe {
@@ -536,4 +536,5 @@ opacity: 0.5;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 15px;
 }
