--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -95,6 +95,8 @@ color: #9500ff;
       width: 50%;
       position: absolute;
       color: white;
+      z-index: 100;
+    margin-left: 30px;
   }
   #partOne{
       width: 100%;
@@ -111,9 +113,34 @@ color: #9500ff;
     background-repeat: no-repeat;
     margin-top: 0;
   }
-  #partOne img{
+  #partlOne{
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+   
+  }
+  .animatesss{
+    width: 100%;
+    box-sizing:border-box;
+    position: relative;
+    display: flex;
+    justify-content: center;
+  }
+  .logoQe{
     width: 300px;
+position: absolute;
+   z-index: 45;
+   top: 20px;
 }
+.letsGif{
+
+  width: 100%;
+}
+
   .qualityEducation{
       color: white;
       font-weight: 800;
@@ -540,4 +567,23 @@ opacity: 0.5;
   width: 100%;
   height: 100%;
   padding-top: 15px;
+}
+
+/* animation testing */
+.square {
+  width: 100%;
+  height: 500px;
+  opacity: 0;
+    transform: scale(1.2);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .square {
+    transition: opacity 1.5s ease, transform 1.5s ease;
+  }
+}
+
+.square-transition {
+    opacity: 1;
+    transform: none;
 }
