--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -571,19 +571,21 @@ opacity: 0.5;
 
 /* animation testing */
 .square {
-  width: 100%;
-  height: 500px;
+  width: 200px;
+  height: 200px;
+  background: teal;
+  border-radius: 8px;
   opacity: 0;
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .square {
-    transition: opacity 1.5s ease, transform 1.5s ease;
-  }
+.square {
+  transition: opacity 1.5s ease, transform 1.5s ease;
+}
 }
 
 .square-transition {
-    opacity: 1;
-    transform: none;
+  opacity: 1;
+  transform: none;
 }
