--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -178,9 +178,11 @@ position: absolute;
     background-color:#333333;
     font-size: 25px;
     text-decoration: none;
+    transition: all .2s ease-in-out;
   }
   #partTwo a:hover{
     opacity: 0.5;
+    transform: scale(1.1); 
   }
   #partTwo img{
     max-width: 600px;
@@ -236,6 +238,10 @@ position: absolute;
     border-radius: 12px;
     padding: 12px;
     margin: 10px;
+    transition: all .2s ease-in-out;
+  }
+  .project:hover{
+    transform: scale(1.1);
   }
   .project img {
     border-radius: 12px;
@@ -315,7 +321,10 @@ position: absolute;
   }
   .people {
     z-index: 5;
+    
   }
+
+ 
   
   .aboutUs p{
     padding: 15px;
@@ -371,13 +380,17 @@ position: absolute;
   justify-content: center;
   align-items: center;
   padding: 20px;
+  transition: all .2s ease-in-out;
 }
 .iconic a{
   margin: 10px;
 }
 .iconic a:hover {
 opacity: 0.5;
+transform: scale(1.1);
 }
+
+
   /* katoe */
   .katoe{
     margin: 0 auto;
@@ -570,17 +583,14 @@ opacity: 0.5;
 }
 
 /* animation testing */
-.square {
-  width: 200px;
-  height: 200px;
-  background: teal;
-  border-radius: 8px;
+.square, .square2, .square3 {
+  width: 100%;
   opacity: 0;
   transform: scale(1.2);
 }
 
 @media (prefers-reduced-motion: no-preference) {
-.square {
+.square, .square2, .square3 {
   transition: opacity 1.5s ease, transform 1.5s ease;
 }
 }
@@ -589,3 +599,5 @@ opacity: 0.5;
   opacity: 1;
   transform: none;
 }
+
+/*typer writer*/
