--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -2,6 +2,12 @@
 
 
 
+@media screen and (max-width:768px) {
+    .twoInOne{
+        flex-direction: column;
+    }
+  
+}
 @media screen and (min-width:426px) {
   
     #partTwo{
@@ -26,12 +32,7 @@
    
 }
 
-@media screen and (max-width:768px) {
-    .twoInOne{
-        flex-direction: column;
-    }
-  
-}
+
 @media screen and (min-width: 769px) {
     .twoInOne{
         flex-direction: row;
@@ -42,4 +43,9 @@
     .vmieo{
         width: 500px;
     }
+}
+
+@media screen and (min-width: 1024px){
+   
+    
 }
