--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -99,21 +99,29 @@ color: #9500ff;
     margin-left: 30px;
   }
   #partOne{
-      width: 100%;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      text-align: center;
-      height: 500px;
-      justify-content: center;
-      align-items: center;
-      background-image: url(../Assets/Asset1.png); 
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin-top: 0;
+    box-sizing: border-box;
+    animation: kenburns-top 5s ease-out both;
+    overflow: hidden;
   }
-  #partlOne{
+
+
+@keyframes kenburns-top {
+  0% {
+    -webkit-transform: scale(1) translateY(0);
+            transform: scale(1) translateY(0);
+    -webkit-transform-origin: 10% 16%;
+            transform-origin: 10% 16%;
+  }
+  100% {
+    -webkit-transform: scale(1.05) translateY(-35px);
+            transform: scale(1.05) translateY(-35px);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+}
+
+
+  #partlOne, #partOne{
     width: 100%;
     box-sizing: border-box;
     display: flex;
