--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,7 +1,13 @@
 
 
 
-
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+      background-attachment: scroll;
+    }
+  }
+  
 @media screen and (max-width:768px) {
     .twoInOne{
         flex-direction: column;
@@ -49,3 +55,4 @@
    
     
 }
+
