--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -413,24 +413,43 @@ transform: scale(1.1);
 
 
   /* katoe */
-  .katoe{
-    margin: 0 auto;
-    max-width: 650px;
+ .katoe{
    width: 100%;
-    box-sizing: border-box;
-    padding: 15px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .katoe p{
-    max-width: 600px;
-    padding: 15px;
-    text-align: justify;
-  
-  }
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   box-sizing: border-box;
+   padding: 20px;
+ }
+
+.blueLo, .orangeLo{
+  max-width: 1024px;
+  box-sizing: border-box;
+  background-color: rgb(241, 241, 241);
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  box-shadow: 0 2px 10px rgba(190, 190, 190, 0.596);
+}
+
+.myText{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 15px;
+  font-size: 18x;
+}
+.myText p{
+  max-width: 650px;
+}
+
+
   .tops{
     margin: 0 auto;
   }
@@ -440,11 +459,12 @@ transform: scale(1.1);
     margin-bottom: 20px;
   }
   .kidWithBottle{
-    max-width: 390px;
+    max-width: 500px;
     width: 100%;
     box-sizing: border-box;
-    float: left;
+    margin: 0 auto;
     padding: 25px;
+    
   }
   .groupS{
     max-width: 500px;
@@ -654,3 +674,33 @@ transform: scale(1.1);
   from, to { border-color: transparent }
   50% { border-color: rgb(0, 153, 255); }
 }
+
+.parallax, .parallax2 {
+  /* The image used */
+
+  /* Set a specific height */
+  min-height: 500px;
+max-width: 1024px;
+width: 100%;
+margin: 0 auto;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: lighten;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 500;
+
+}
+.parallax{
+  background-image: url("../Assets/mountain3.png");
+}
+.parallax2{
+  background-image: url("../Assets/mountain2.png");
+}
+
