--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -424,7 +424,7 @@ transform: scale(1.1);
  }
 
 .blueLo, .orangeLo{
-  max-width: 1024px;
+  max-width: 1524px;
   box-sizing: border-box;
   background-color: rgb(241, 241, 241);
   margin: 20px;
@@ -434,6 +434,7 @@ transform: scale(1.1);
   justify-content: center;
   border-radius: 15px;
   box-shadow: 0 2px 10px rgba(190, 190, 190, 0.596);
+  margin-left:200px;
 }
 
 .myText{
@@ -458,14 +459,7 @@ transform: scale(1.1);
     margin-top: 20px;
     margin-bottom: 20px;
   }
-  .kidWithBottle{
-    max-width: 500px;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 25px;
-    
-  }
+ 
   .groupS{
     max-width: 500px;
   }
@@ -679,10 +673,9 @@ transform: scale(1.1);
   /* The image used */
 
   /* Set a specific height */
-  min-height: 500px;
-max-width: 1024px;
-width: 100%;
-margin: 0 auto;
+  max-width: 750px;
+width: 50%;
+max-height: 1000px;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
@@ -693,8 +686,10 @@ margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   font-size: 18px;
   font-weight: 500;
+
 
 }
 .parallax{
@@ -703,4 +698,28 @@ margin: 0 auto;
 .parallax2{
   background-image: url("../Assets/mountain2.png");
 }
+.sideByside{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
 
+.kidWithBottle{
+  
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 25px;
+  
+}
+
+.imageKid{
+  max-width: 750px;
+  width: 50%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
