--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -170,7 +170,7 @@ position: absolute;
     width: 100%;
     box-sizing: border-box;
   }
-  #partTwo{
+  #partTwo, #partTwo2{
       width: 100%;
       height: 600px;
       display: flex;
@@ -188,7 +188,7 @@ position: absolute;
     z-index: 1;
   }
   #partTwo h1{
-    margin-top: -350px;
+    margin-top: -290px;
   }
  
   #partTwo a{
