--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -723,3 +723,24 @@ max-height: 1000px;
   justify-content: center;
   align-items: center;
 }
+
+/*paralax*/
+.parallaX {
+  /* The image used */
+  background-image: url("../Assets/parallaX.png");
+
+  /* Set a specific height */
+  min-height: 100vh;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+  .parallaX {
+    background-attachment: scroll;
+  }
+}
