--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -98,6 +98,9 @@ color: #9500ff;
       z-index: 100;
     margin-left: 30px;
   }
+  .mobileMenu:hover{
+    color: rgb(64, 147, 224);
+  }
   #partOne{
     box-sizing: border-box;
     animation: kenburns-top 5s ease-out both;
@@ -718,7 +721,7 @@ transform: scale(1.1);
 }
 /* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
 @media only screen and (max-device-width: 1366px) {
-  .parallaX, .animatesss{
+  .parallaX, .animatesss, .animatesss2{
     background-attachment: scroll;
   }
 }
