--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -445,7 +445,7 @@ transform: scale(1.1);
   align-items: center;
   flex-direction: column;
   padding: 15px;
-  font-size: 18x;
+  font-size: 16px;
 }
 .myText p{
   max-width: 650px;
@@ -653,43 +653,11 @@ transform: scale(1.1);
   from, to { border-color: transparent }
   50% { border-color: rgb(0, 153, 255); }
 }
-.parallax1{
-  background-image: url(../Assets/a4a.png);
-  height: 600px;
-   background-size: cover;
-   color: white;
-   display: flex;
-   justify-content: center;
-   padding: 10px;
-   margin-bottom: 20px;
-}
-.sideByside{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-}
 
-.kidWithBottle{
-  
-  width: 100%;
-  box-sizing: border-box;
-  margin: 0 auto;
-  padding: 15px;
-}
 
-.imageKid{
-  max-width: 750px;
-  width: 50%;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.imageKid img{
- 
-}
+
+
+
 
 /*paralax*/
 .parallaX, .animatesss, .animatesss2{
@@ -743,7 +711,7 @@ transform: scale(1.1);
   box-sizing: border-box;
 
 } 
-.rightSide1{
+.rightSide1, .rightSide2{
   width: 100%;
   background-image: url(../Assets/a4a.png);
   background-size: cover;
@@ -751,6 +719,12 @@ transform: scale(1.1);
   justify-content: center;
   flex-direction: column;
   text-align: center;
+}
+.rightSide2{
+  height: auto;
+  box-sizing: border-box;
+  text-align: left;
+  color: white;
 }
 .leftSide1{
   width: 100%;
@@ -771,6 +745,28 @@ transform: scale(1.1);
   background-size: cover;
  overflow: hidden;
 }
+.leftSide4{
+  width: 100%;
+  background-image: url(../Assets/Asset21.png);
+  background-size: cover;
+ overflow: hidden;
+ background-position: right;
+ background-position: right;
+}
+.leftSide5{
+  width: 100%;
+  background-image: url(../Assets/a33.png);
+  background-size: cover;
+ overflow: hidden;
+}
+.leftSide5{
+  width: 100%;
+  background-image: url(../Assets/Asset22.png);
+  background-size: cover;
+ overflow: hidden;
+ height: 550px;
+}
+
 .rightSide1 h1{
   font-size: 100px;
   color: white;
@@ -790,7 +786,7 @@ transform: scale(1.1);
   flex-direction: column-reverse;
 }
 @media  screen and (min-width: 950px) {
-  .rightSide1, .leftSide1, .leftSide2, .leftSide3{
+  .rightSide1, .leftSide1, .leftSide2, .leftSide3, .rightSide2, .leftSide4, .leftSide5{
     width: 50%;
   }
   .twoSides, .twoSideTwo{
