--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -870,6 +870,7 @@ transform: scale(1.1);
   0 0 0 15px #7ac0fa;
   margin-top: 25px;
   margin-bottom: 25px;
+  animation: heartbeat 8.5s ease-in-out infinite both;
 }
 @media screen and (min-width: 950px){
   .rowRev1{
