--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -660,7 +660,7 @@ transform: scale(1.1);
 
 
 /*paralax*/
-.parallaX, .animatesss, .animatesss2{
+.parallaX, .animatesss, .animatesss2, .animatesss3, .animatesss4{
   max-width: 1440px;
   width: 100%;
   /* The image used */
@@ -687,9 +687,15 @@ transform: scale(1.1);
 .animatesss2{
   background-image: url("../Assets/katoeMatoe.png");
 }
+.animatesss3{
+  background-image: url("../Assets/back-to-school.png");
+}
+.animatesss4{
+  background-image: url("../Assets/community-center.png");
+}
 /* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
 @media only screen and (max-device-width: 1366px) {
-  .parallaX, .animatesss, .animatesss2{
+  .parallaX, .animatesss, .animatesss2, .animatesss3, .animatesss4{
     background-attachment: scroll;
   }
 }
