--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -868,3 +868,41 @@ transform: scale(1.1);
     flex-direction: row-reverse;
   }
 }
+
+/*sideMenu*/
+
+#mySidenav5 a {
+  position: absolute;
+  left: -240px;
+  transition: 0.3s;
+  padding: 15px;
+  width: 260px;
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  border-radius: 0 5px 5px 0;
+}
+
+#mySidenav5 a:hover {
+  left: 0;
+}
+
+#menu1 {
+  top: 60px;
+  background-color: #77bcf5;
+}
+
+#menu2 {
+  top: 120px;
+  background-color: #68b7f8;
+}
+
+#menu3 {
+  top: 180px;
+  background-color: #4da7f1;
+}
+
+#menu4 {
+  top: 240px;
+  background-color: #2196F3;
+}
