--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -701,7 +701,7 @@ transform: scale(1.1);
   background-image: url("../Assets/sponsora-child.png");
 }
 .animatesss6{
-  background-image: url("../Assets/about-katoe.png");
+  background-image: url("../Assets/theTeam.png");
 }
 .animatesss7{
   background-image: url("../Assets/donate-now.png");
