--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -154,7 +154,7 @@ color: #9500ff;
     width: 220px;
 position: absolute;
    z-index: 0;
-   top: 50%;
+   top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -722,6 +722,7 @@ transform: scale(1.1);
   flex-direction: column;
   background-image: url(../Assets/a4a.png);
   background-size: cover;
+  padding: 0;
 }
 .twoSides{
   width: 100%;
@@ -758,9 +759,11 @@ transform: scale(1.1);
 .leftSide1{
   width: 100%;
   box-sizing: border-box;
+  height: 350px;
+  overflow: hidden;
 }
 .leftSide1 img{
-  max-width: 850px;
+  max-width: 950px;
   width: 100%;
 }
 
@@ -790,7 +793,6 @@ transform: scale(1.1);
   }
   .twoSides, .twoSideTwo{
     flex-direction: row-reverse;
-    padding: 5px;
   }
  .leftSide5{
   background-position: right;
