--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -97,10 +97,36 @@ color: #9500ff;
       color: silver;
       z-index: 100;
     margin-left: 30px;
+    display: block;
   }
   .mobileMenu:hover{
     color: rgb(64, 147, 224);
   }
+  .justMenu{ display: none;}
+  @media screen and (min-width: 1024px){
+    .mobileMenu{
+        display: none;
+    }
+    .justMenu{
+      width: 100%;
+      box-sizing: border-box;
+      z-index: 5;
+      background-color: #3C93DB;
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .justMenu a{
+      font-size: 25px;
+      padding-left: 15px;
+      padding-right: 15px;
+      text-decoration: none;
+    font-weight: 500;
+    color: white;
+    }
+  }
+
   #partOne{
     box-sizing: border-box;
     animation: kenburns-top 5s ease-out both;
@@ -151,12 +177,8 @@ color: #9500ff;
     background-color: #2357c757;
   }
   .logoQe{
-    width: 220px;
-position: absolute;
+    width: 160px;
    z-index: 0;
-   top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 .letsGif{
 
@@ -174,6 +196,7 @@ position: absolute;
     box-sizing: border-box;
   }
   #partTwo, #partTwo2{
+    max-width: 1024px;
       width: 100%;
       height: 600px;
       display: flex;
@@ -209,7 +232,7 @@ position: absolute;
     transform: scale(1.1); 
   }
   #partTwo img{
-    max-width: 600px;
+    max-width: 1000px;
   }
   #ourProjects{
     width: 100%;
@@ -672,7 +695,7 @@ transform: scale(1.1);
 	-webkit-animation: kenburns-top 5s ease-out both;
 	        animation: kenburns-top 5s ease-out both;
   /* Set a specific height */
-  min-height: 100vh;
+  min-height: 70vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -723,6 +746,7 @@ transform: scale(1.1);
   background-image: url(../Assets/a4a.png);
   background-size: cover;
   padding: 0;
+  margin-top: -20px;
 }
 .twoSides{
   width: 100%;
@@ -733,7 +757,7 @@ transform: scale(1.1);
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column-reverse;
   text-align: center;
   background-repeat: no-repeat;
 }
@@ -784,7 +808,7 @@ transform: scale(1.1);
   margin-top: -55px;
 }
 .twoSideTwo{
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
 @media  screen and (min-width: 950px) {
